# ModAB-Root-Finding

./: .gitignore  Benchmark results.md  README.md  sage_modab_review_email_and_annotated_code.txt
.github/workflows/: build.yml
C/: How to build.txt  LICENSE
C#/: Root.Benchmark.sln
C#/Root.Benchmark/: BenchmarkCount.cs  BenchmarkTime.cs  Problem.cs  Program.cs  Root.Benchmark.csproj
C/src/: ModAB.c  libmodAB_arm64.dylib  libmodAB_x64.dylib  modAB.lib
Fortran/: How to build.txt  README.md  fpm.toml
Fortran/results/: Test_results.xlsx
Fortran/src/: root_module.F90
Fortran/test/: root_test_2.f90  root_tests.f90  root_tests_oo.f90
Java/: Main.java  ModAB.java  ModABTest.java  test results.txt
Julia/: BenchmarkResults.ods  BenchmarkResults.txt  ModAB_CS.jl  nonlinearsolve_modab_benchmark.jl
ModAB-Python/: BenchmarkResults.md  Readme.md  RootBenchmark.py
Python/: BenchmarkResults.md  C#-vs-SciPy.ods  Readme.md  RootBenchmark.py
Python/ModAB-King (new)/: ModAB.py  ModAB_King.py  ModAB_King_test.py  ModAB_test_King_fortran_problems.py  RootBenchmark_LTomov.py  RootBenchmark_wall_clock_time.py  Test Results King.txt  Test Results ModAB_King Fortran Problems.txt  Test Results.ods  (+3 more)
Python/PyModAB/: README.md  pyproject.toml
Python/PyModAB/src/pymodab/: libModAB_arm64.dylib  libModAB_x64.dylib
Python/PyModAB/src/pymodab.egg-info/: PKG-INFO
Rust/: bench_results.md
TypeScript/: How to build.txt  ModAB.ts  ModAB_test.ts  test results.txt  tsconfig.json
VBA/: ModAB.bas  Modab-Root-Finding.xlsm
Zig/: How to build.txt  ModAB.zig  main.zig  test results.txt
(+18 files in other folders)
