[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymodab"
version = "1.0.3"
description = "Fast and robust root-finding library using the Modified Anderson-Bjork method"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ganchovski, Traykov"}
]
keywords = ["root-finding", "numerical", "mathematics", "optimization", "bisection", "Anderson-Bjork"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/Just-A-Random-Geek/ModAB-Root-Finding/tree/main/Python/PyModAB"
Repository = "https://github.com/Just-A-Random-Geek/ModAB-Root-Finding/tree/main/Python/PyModAB"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pymodab = ["*.dll", "*.so", "*.dylib", "*.lib", "py.typed"]
